Fix bugs in the about page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <nav class="navbar flex">
-        <a href="#home" class="logo"><span class="block">Block</span>Chain</a>
+        <a href="index.html" class="logo"><span class="block">Block</span>Chain</a>
 
         <ul class="nav-menu flex">
           <li class="nav-item">
