--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       </div>
 
       <nav class="navbar flex">
-        <a href="" class="logo"><span class="block">Block</span>Chain</a>
+        <a href="index.html" class="logo"><span class="block">Block</span>Chain</a>
 
         <ul class="nav-menu flex">
           <li class="nav-item">
@@ -67,7 +67,7 @@
             <p>Please contact us per email for further questions acout BlockChain Global Summit 2022</p>
             <h2>Duanedave19@gmail.com</h2>
           </div>
-          </div>
+        </div>
       </section>
       <section class="about-info flex">
         <div class="caption flex">
