Add scroll to top functionality

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
       </nav>
     </header>
 
-    <main>
+    <main id="home">
       <section class="about headline flex">
         <div class="about headline-content flex">
           <h1>The Future of Blockchain Global Conference 2022</h1>
@@ -65,7 +65,7 @@
           </p>
           <div class="about date">
             <p>Please contact us per email for further questions acout BlockChain Global Summit 2022</p>
-            <h2>Duanedave19@gmail.com</h2>
+            <a href="mailto:duanedave19@gmail.com" class="flex">Duanedave19@gmail.com <span><i class='bx bxs-chevron-right'></i></span></a>
           </div>
         </div>
       </section>
@@ -87,21 +87,21 @@
           <h2 class="white">See past BlockChain Global Summits</h2>
         </div>
         <p>
-          Take a look at the last two BlockChain Global Summit which took place in Buenos Aires and in Warsaw.
+          Take a look at the last two BlockChain Global Summit which took place in Berlin, Germany and in Kansas City.
         </p>
         <div class="events flex">
           <div class="img">
             <img class="event-pic" src="asset/2.jpg" alt="Buenos Aires conference">
             <div class="event-info flex">
               <h2 class="event-year">2020</h2>
-              <p class="event-caption">BlockChain Global Summit 2020 Buenos Aires</p>
+              <p class="event-caption">BlockChain Global Summit 2020 Berlin, Germany</p>
             </div>
           </div>
           <div class="img">
             <img class="event-pic" src="asset/3.jpg" alt="Warsaw conference">
             <div class="event-info flex">
               <h2 class="event-year">2018</h2>
-              <p class="event-caption">BlockChain Global Summit 2018 Warsaw</p>
+              <p class="event-caption">BlockChain Global Summit 2018 Kansas City</p>
             </div>
           </div>
           
@@ -115,7 +115,11 @@
         <h2><span class="block">Block</span>Chain</h2>
         <p>2022 BlockChain Summit Korea, Some Rights Reserve</p>
       </div>
+      <div class="scroll-to-top flex">
+        <a href="#home"><i class='bx bxs-chevron-up'></i></a>
+      </div>
     </footer>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="about.js"></script>
   </body>
