--- a/index.html
+++ b/index.html
@@ -78,28 +78,28 @@
         <div class="program-cards flex">
           <div class="card flex">
             <i class='bx bx-chalkboard'></i>
-            <h2 class="tag">Workshop</h2>
+            <h2 class="tag">Works</h2>
             <p class="tag-detail">
               Try creating your own work using open source license rather than just watching at it
             </p>
           </div>
           <div class="card flex">
             <i class='bx bx-traffic-cone' ></i>
-            <h2 class="tag">Connect</h2>
+            <h2 class="tag">Feeds</h2>
             <p class="tag-detail">
               Try creating your own work using open source license rather than just watching at it
             </p>
           </div>
           <div class="card flex">
             <i class='bx bxs-bar-chart-square'></i>
-            <h2 class="tag">Analysis</h2>
+            <h2 class="tag">Chart</h2>
             <p class="tag-detail">
               Try creating your own work using open source license rather than just watching at it
             </p>
           </div>
           <div class="card flex">
             <i class='bx bx-accessibility' ></i>
-            <h2 class="tag">Accessibility</h2>
+            <h2 class="tag">Hatch</h2>
             <p class="tag-detail">
               Try creating your own work using open source license rather than just watching at it
             </p>
@@ -113,6 +113,7 @@
           </div>
         </div>
         <a href="#" class="see-prog">SEE THE WHOLE PROGRAM</a>
+        <a href="#" class="mobile">Join BC Global Summit 2022</a>
        </div>
       </section>
 
@@ -145,6 +146,9 @@
       <div class="footer flex">
         <h2 class="footer-logo"><span class="block">Block</span>Chain</h2>
         <p class="footer-info">2022 BlockChain Summit Korea, Some Rights Reserve</p>
+      </div>
+      <div class="scroll-to-top flex">
+        <a href="#home"><i class='bx bxs-chevron-up'></i></a>
       </div>
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
