Add title to pages

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="boxicons/css/boxicons.min.css" />
-    <title></title>
+    <title>BlockChain Global Summit 2022</title>
   </head>
   <body>
     <header class="header">
