Style the show more button

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         <div class="feat-speaker flex">
         </div>
-        <button class="flex" id="show-more">Show More <i class='bx bx-chevron-down' id="chevron"></i></button>
+        <button class="flex" id="show-more">Show More</button>
       </section>
 
       <section class="partner" id="patners">
