Clear linter error

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="head">
         <ul class="head-details flex">
           <li>
-            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class="bx bxl-facebook"></i></a>
           </li>
           <li>
-            <a href="#"><i class='bx bxl-twitter' ></i></i></a>
+            <a href="#"><i class="bx bxl-twitter"></i></a>
           </li>
           <li><a href="#">English</a></li>
           <li><a href="#">My Page</a></li>
@@ -25,7 +25,9 @@
       </div>
 
       <nav class="navbar flex">
-        <a href="index.html" class="logo"><span class="block">Block</span>Chain</a>
+        <a href="index.html" class="logo"
+          ><span class="block">Block</span>Chain</a
+        >
 
         <ul class="nav-menu flex">
           <li class="nav-item">
@@ -58,100 +60,108 @@
 
     <section class="headline flex" id="home">
       <div class="headline-content flex">
-      <h1>The Future of Blockchain Global Conference 2022</h1>
-      <p class="text">
-        A joyful celebration believing and exploring the value of what blockchain holds and its infinite opportunity in creating a positive transformation in how the word view finance.
-      </p>
-      <div class="date">
-        <h2>2022.08.15(THU) - 16 (FRI)</h2>
-        <p>@ National Museum of Korea Art Center Nabi and More</p>
-      </div>
+        <h1>The Future of Blockchain Global Conference 2022</h1>
+        <p class="text">
+          A joyful celebration believing and exploring the value of what
+          blockchain holds and its infinite opportunity in creating a positive
+          transformation in how the word view finance.
+        </p>
+        <div class="date">
+          <h2>2022.08.15(THU) - 16 (FRI)</h2>
+          <p>@ National Museum of Korea Art Center Nabi and More</p>
+        </div>
       </div>
     </section>
 
     <main>
       <section class="main-program" id="program">
-       <div class="contents flex">
-        <div class="caption flex">
-          <h2 class="white">Main Program</h2>
+        <div class="contents flex">
+          <div class="caption flex">
+            <h2 class="white">Main Program</h2>
+          </div>
+          <div class="program-cards flex">
+            <div class="card flex">
+              <i class="bx bx-chalkboard"></i>
+              <h2 class="tag">Works</h2>
+              <p class="tag-detail">
+                Try creating your own work using open source license rather than
+                just watching at it
+              </p>
+            </div>
+            <div class="card flex">
+              <i class="bx bx-traffic-cone"></i>
+              <h2 class="tag">Feeds</h2>
+              <p class="tag-detail">
+                Try creating your own work using open source license rather than
+                just watching at it
+              </p>
+            </div>
+            <div class="card flex">
+              <i class="bx bxs-bar-chart-square"></i>
+              <h2 class="tag">Chart</h2>
+              <p class="tag-detail">
+                Try creating your own work using open source license rather than
+                just watching at it
+              </p>
+            </div>
+            <div class="card flex">
+              <i class="bx bx-accessibility"></i>
+              <h2 class="tag">Hatch</h2>
+              <p class="tag-detail">
+                Try creating your own work using open source license rather than
+                just watching at it
+              </p>
+            </div>
+            <div class="card flex">
+              <i class="bx bx-cloud-rain"></i>
+              <h2 class="tag">Cloud</h2>
+              <p class="tag-detail">
+                Try creating your own work using open source license rather than
+                just watching at it
+              </p>
+            </div>
+          </div>
+          <a href="#" class="see-prog">SEE THE WHOLE PROGRAM</a>
+          <a href="#" class="mobile">Join BC Global Summit 2022</a>
         </div>
-        <div class="program-cards flex">
-          <div class="card flex">
-            <i class='bx bx-chalkboard'></i>
-            <h2 class="tag">Works</h2>
-            <p class="tag-detail">
-              Try creating your own work using open source license rather than just watching at it
-            </p>
-          </div>
-          <div class="card flex">
-            <i class='bx bx-traffic-cone' ></i>
-            <h2 class="tag">Feeds</h2>
-            <p class="tag-detail">
-              Try creating your own work using open source license rather than just watching at it
-            </p>
-          </div>
-          <div class="card flex">
-            <i class='bx bxs-bar-chart-square'></i>
-            <h2 class="tag">Chart</h2>
-            <p class="tag-detail">
-              Try creating your own work using open source license rather than just watching at it
-            </p>
-          </div>
-          <div class="card flex">
-            <i class='bx bx-accessibility' ></i>
-            <h2 class="tag">Hatch</h2>
-            <p class="tag-detail">
-              Try creating your own work using open source license rather than just watching at it
-            </p>
-          </div>
-          <div class="card flex">
-            <i class='bx bx-cloud-rain' ></i>
-            <h2 class="tag">Cloud</h2>
-            <p class="tag-detail">
-              Try creating your own work using open source license rather than just watching at it
-            </p>
-          </div>
-        </div>
-        <a href="#" class="see-prog">SEE THE WHOLE PROGRAM</a>
-        <a href="#" class="mobile">Join BC Global Summit 2022</a>
-       </div>
       </section>
 
       <section class="speakers flex">
         <div class="caption flex">
           <h2>Featured Speakers</h2>
         </div>
-        <div class="feat-speaker flex">
-        </div>
+        <div class="feat-speaker flex"></div>
         <button class="flex" id="show-more">Show More</button>
       </section>
 
       <section class="partner" id="patners">
         <div class="caption flex">
           <h2>Partners</h2>
-          `<div class="featured">
-          </div>
+          `
+          <div class="featured"></div>
         </div>
         <div class="partner-logo flex">
-          <img class="sponsors" src="asset/binance (2).png" alt="partner binance">
-          <img class="sponsors" src="asset/ripple (2).png" alt="partner ripple">
-          <img class="sponsors" src="asset/tesla (2).png" alt="partner tesla">
-          <img class="sponsors" src="asset/euro.png" alt="partner euro">
-          <img class="sponsors" src="asset/ethereum.png" alt="ethereum">
-          <img class="sponsors" src="asset/gemini.png" alt="partner gemini">
+          <img class="sponsors" src="asset/binance.png" alt="partner binance" />
+          <img class="sponsors" src="asset/ripple.png" alt="partner ripple" />
+          <img class="sponsors" src="asset/tesla.png" alt="partner tesla" />
+          <img class="sponsors" src="asset/euro.png" alt="partner euro" />
+          <img class="sponsors" src="asset/ethereum.png" alt="ethereum" />
+          <img class="sponsors" src="asset/gemini.png" alt="partner gemini" />
         </div>
       </section>
     </main>
     <footer>
       <div class="footer flex">
         <h2 class="footer-logo"><span class="block">Block</span>Chain</h2>
-        <p class="footer-info">2022 BlockChain Summit Korea, Some Rights Reserve</p>
+        <p class="footer-info">
+          2022 BlockChain Summit Korea, Some Rights Reserve
+        </p>
       </div>
       <div class="scroll-to-top flex">
-        <a href="#home"><i class='bx bxs-chevron-up'></i></a>
+        <a href="#home"><i class="bx bxs-chevron-up"></i></a>
       </div>
     </footer>
-    <script src="https://unpkg.com/scrollreveal"></script>
+
     <script src="main.js"></script>
   </body>
 </html>
