--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
       <div class="head">
         <ul class="head-details flex">
           <li>
-            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class="bx bxl-facebook"></i></a>
           </li>
           <li>
-            <a href="#"><i class='bx bxl-twitter' ></i></i></a>
+            <a href="#"><i class="bx bxl-twitter"></i></a>
           </li>
           <li><a href="#">English</a></li>
           <li><a href="#">My Page</a></li>
@@ -25,7 +25,9 @@
       </div>
 
       <nav class="navbar flex">
-        <a href="index.html" class="logo"><span class="block">Block</span>Chain</a>
+        <a href="index.html" class="logo"
+          ><span class="block">Block</span>Chain</a
+        >
 
         <ul class="nav-menu flex">
           <li class="nav-item">
@@ -61,11 +63,22 @@
         <div class="about headline-content flex">
           <h1>The Future of Blockchain Global Conference 2022</h1>
           <p class="text">
-           The Globa Summit brings together the community of experts, academic and activists who comprise the BlockChain affiliate network in a different country every two years. This year, we hope to expand our invitation lists including organization and individuals who want to work wit us on share project that betters the future of BlockChain, free culture and open knowledge.
+            The Globa Summit brings together the community of experts, academic
+            and activists who comprise the BlockChain affiliate network in a
+            different country every two years. This year, we hope to expand our
+            invitation lists including organization and individuals who want to
+            work wit us on share project that betters the future of BlockChain,
+            free culture and open knowledge.
           </p>
           <div class="about date">
-            <p>Please contact us per email for further questions acout BlockChain Global Summit 2022</p>
-            <a href="mailto:duanedave19@gmail.com" class="flex">Duanedave19@gmail.com <span><i class='bx bxs-chevron-right'></i></span></a>
+            <p>
+              Please contact us per email for further questions acout BlockChain
+              Global Summit 2022
+            </p>
+            <a href="mailto:duanedave19@gmail.com" class="flex"
+              >Duanedave19@gmail.com
+              <span><i class="bx bxs-chevron-right"></i></span
+            ></a>
           </div>
         </div>
       </section>
@@ -75,11 +88,15 @@
         </div>
 
         <p>
-          The logo of BlockChain SGlobal Summit 2022 was decided through the logo competion from 8, June to 7, July. After online public voting and Selection Comittee's judging process, the logo from Hero Nakamuto won the prize. After consultation with Mr. Grewal Hashman we optimized the prize-wininning-logo for this year's summit as following 
+          The logo of BlockChain SGlobal Summit 2022 was decided through the
+          logo competion from 8, June to 7, July. After online public voting and
+          Selection Comittee's judging process, the logo from Hero Nakamuto won
+          the prize. After consultation with Mr. Grewal Hashman we optimized the
+          prize-wininning-logo for this year's summit as following
         </p>
 
         <div class="b-logo">
-          <img src="asset/logo.png" alt="company logo">
+          <img src="asset/logo.png" alt="company logo" />
         </div>
       </section>
       <section class="about-info space flex">
@@ -87,28 +104,34 @@
           <h2 class="white">See past BlockChain Global Summits</h2>
         </div>
         <p>
-          Take a look at the last two BlockChain Global Summit which took place in Berlin, Germany and in Kansas City.
+          Take a look at the last two BlockChain Global Summit which took place
+          in Berlin, Germany and in Kansas City.
         </p>
         <div class="events flex">
           <div class="img">
-            <img class="event-pic" src="asset/2.jpg" alt="Buenos Aires conference">
+            <img
+              class="event-pic"
+              src="asset/2.jpg"
+              alt="Buenos Aires conference"
+            />
             <div class="event-info flex">
               <h2 class="event-year">2020</h2>
-              <p class="event-caption">BlockChain Global Summit 2020 Berlin, Germany</p>
+              <p class="event-caption">
+                BlockChain Global Summit 2020 Berlin, Germany
+              </p>
             </div>
           </div>
           <div class="img">
-            <img class="event-pic" src="asset/3.jpg" alt="Warsaw conference">
+            <img class="event-pic" src="asset/3.jpg" alt="Warsaw conference" />
             <div class="event-info flex">
               <h2 class="event-year">2018</h2>
-              <p class="event-caption">BlockChain Global Summit 2018 Kansas City</p>
+              <p class="event-caption">
+                BlockChain Global Summit 2018 Kansas City
+              </p>
             </div>
           </div>
-          
         </div>
       </section>
-
-      
     </main>
     <footer>
       <div class="footer about flex">
@@ -116,11 +139,10 @@
         <p>2022 BlockChain Summit Korea, Some Rights Reserve</p>
       </div>
       <div class="scroll-to-top flex">
-        <a href="#home"><i class='bx bxs-chevron-up'></i></a>
+        <a href="#home"><i class="bx bxs-chevron-up"></i></a>
       </div>
     </footer>
 
-    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="about.js"></script>
   </body>
 </html>
