Link about page and index

--- a/about.html
+++ b/about.html
@@ -37,13 +37,13 @@
             <a href="#" class="nav-link active">About</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Program</a>
+            <a href="index.html#program" class="nav-link">Program</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Join</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Sponsor</a>
+            <a href="index.html#patners" class="nav-link">Sponsor</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">News</a>
