implement pop-up

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#program" class="nav-link">Program</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Join</a>
+            <a href="#" class="nav-link" id="join">Join</a>
           </li>
           <li class="nav-item">
             <a href="#patners" class="nav-link">Sponsor</a>
@@ -59,6 +59,20 @@
           <span class="line"></span>
         </div>
       </nav>
+
+      <div class="flex" id="layer">
+        <div class="register off flex" id="on-success">
+          <h2 class="pop-head">Register For BlockChain Global Summit 2022</h2>
+          <form id="form">
+            <input type="text" placeholder="Full Name" id="fname" />
+
+            <input type="email" placeholder="Email" id="email" />
+            <span class="error"></span>
+
+            <button type="submit" class="btn-submit">Register</button>
+            <i class="bx bx-x"></i>
+          </form>
+        </div>
     </header>
 
     <section class="headline flex" id="home">
