--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <i class="bx bx-x"></i>
           </form>
         </div>
+      </div>
     </header>
 
     <section class="headline flex" id="home">
