--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <title>BlockChain Global Summit 2022</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="nav">
       <div class="head">
         <ul class="head-details flex">
           <li>
@@ -142,7 +142,7 @@
         <p>2022 BlockChain Summit Korea, Some Rights Reserve</p>
       </div>
       <div class="scroll-to-top flex">
-        <a href="#home"><i class="bx bxs-chevron-up"></i></a>
+        <a href="#nav"><i class="bx bxs-chevron-up"></i></a>
       </div>
     </footer>
 
