--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>BlockChain Global Summit 2022</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="nav">
       <div class="head">
         <ul class="head-details flex">
           <li>
@@ -176,7 +176,7 @@
         </p>
       </div>
       <div class="scroll-to-top flex">
-        <a href="#home"><i class="bx bxs-chevron-up"></i></a>
+        <a href="#nav"><i class="bx bxs-chevron-up"></i></a>
       </div>
     </footer>
 
