--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <h2>Featured Speakers</h2>
         </div>
         <div class="feat-speaker flex"></div>
-        <button class="flex" id="show-more">Show More</button>
+        <button class="flex" id="show-more">Show More  <i class="bx bx-chevron-down"></i></button>
       </section>
 
       <section class="partner" id="patners">
